--- a/projectStyle.css
+++ b/projectStyle.css
@@ -354,6 +354,12 @@ section {
           justify-content: center;
 }
 
+  section.challenge {
+    margin-top: 0;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
 .project-intro {
   width: 100%;
   height: 100vh;
@@ -997,25 +1003,25 @@ footer {
 
 /* ----------------------------------- my plastic footprint Intro------------------------------------- */
 
+body#mpf {
+  background-image: url("./Assets/mpf-bg.svg");
+  background-size: contain;
+  background-attachment: fixed;
+}
 
 section#mpf-intro {
-    background-image: url("./Assets/mpf-bg.svg");
-    background-color: #778899;
+    background-color: rgba(220, 220, 220, 0.93);
   }
 
-  section#mpf-intro h2,
+  /* section#mpf-intro h2,
   section#mpf-intro p {
     color: white;
-  }
+  } */
 
       img#mpf-cover {
         width: 100%;
         height: auto;
       }
-
-section#mpf-early-concept h3 {
-  margin-bottom: 0;
-}
 
 
 
@@ -1031,7 +1037,7 @@ section#wishup-why {
   background-image: url("./Assets/up-wallpaper.png");
   background-position: 10% 50%;
   background-size: 18%;
-  background-color: #e6edf6;
+  background-color: #f8f8ff;
   padding-top: 4%;
   padding-bottom: 4%;
   margin-bottom: 9%;
@@ -1056,7 +1062,6 @@ section#wishup-why {
 }
 
 section#bardot-challenge {
-  padding-top: 5%;
   background-color: black;
 }
   section#bardot-challenge h3 {
