--- a/myStyle.css
+++ b/myStyle.css
@@ -183,9 +183,37 @@ h3 {
 
 
 
+  .background {
+    width: 100vw;
+    height: 100vh;
+    z-index: -1000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+      /* .bg_line { width: 2px; transform-origin:  bottom left;} */
+      #my-lion {
+        height: 90vh;
+        width: auto;
+        margin-left: 20%;
+        overflow: visible;
+      }
+      #my-lion .st0 {
+        fill:#e2e9ed;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;
+      }
 
-
-
+      h1 {
+        font-family: 'Lilita One', cursive;
+        font-size: calc(1.5em + 1vw);
+        letter-spacing: 0.09em;
+        line-height: 1.4em;
+      }
 
 
 a#emailIcon {
@@ -460,42 +488,22 @@ a#emailIcon {
 
 /* Intro Section */
 section.intro {
+  width: 100%;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  display: -moz-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-flex-align-items: center;
-  -moz-align-items: center;
-  text-align: center;
-  font-family: 'Fira Sans', sans-serif;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #f5f5f5;
-  color: #8C9BAF;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: calc(20px + 5%);
 }
 
-      #intro_text {
-        margin-top: -5%;
-      }
 
-      #intro_text strong {
-        color: #2A2F36;
-      }
 
         a.CTAarrow {
           display: -webkit-inline-box;
           display: -ms-inline-flexbox;
           display: inline-flex;
-          position: absolute;
+          /* position: absolute; */
           bottom: 12%;
           -webkit-box-pack: center;
               -ms-flex-pack: center;
@@ -584,7 +592,14 @@ section.intro {
 
 
 
+          #intro_text {
+            width: 40%;
+            margin-left: 10%;
+          }
 
+          #home-CTAarrow {
+            margin: 20% 20% 30px 30px;
+          }
 
 
 
