--- a/projectStyle.css
+++ b/projectStyle.css
@@ -278,12 +278,12 @@ h5 {
 h5 small {
 	font-size: .8rem;
 	letter-spacing: .1rem;
-	font-weight: 200;
+	font-weight: 300;
 }
 
 i {
 	font-size: .9em;
-	font-weight: 200;
+	font-weight: 300;
 	letter-spacing: .1em;
 	line-height: 2em;
 }
@@ -676,6 +676,128 @@ a.cta-w-label:hover {
 	-ms-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 }
+
+
+
+
+.CTA-button {
+	width: 188px;
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	text-decoration: none;
+	text-align: center;
+	text-transform: uppercase;
+	margin: 30px 0;
+	cursor: pointer;
+}
+
+svg.button-outline {
+	display: inline;
+	stroke-dasharray: 50 200;
+	stroke-dashoffset: 95;
+}
+
+h6.CTA-label {
+	display: inline;
+	font-weight: 800;
+	letter-spacing: .25em;
+	text-transform: uppercase;
+	color: #0e83ea;
+}
+
+.CTA-button:before {
+	content: "";
+	width: 178px;
+	height: 42px;
+	-webkit-transform: scaleY(0);
+	-ms-transform: scaleY(0);
+	transform: scaleY(0);
+	-webkit-transform-origin: top;
+	-ms-transform-origin: top;
+	transform-origin: top;
+	position: absolute;
+	background-image: -o-linear-gradient(top left, #f90760, #0e83ea);
+	background-image: -webkit-gradient(linear, left top, right bottom, from(#f90760), to(#0e83ea));
+	background-image: linear-gradient(to bottom right, #f90760, #0e83ea);
+	z-index: -1;
+	-webkit-transition: all 1s;
+	-o-transition: all 1s;
+	transition: all 1s;
+}
+
+.CTA-button:hover:before {
+	-webkit-animation: buttonGlare .4s;
+	animation: buttonGlare .4s;
+	-webkit-animation-delay: .3s;
+	animation-delay: .3s;
+}
+
+@-webkit-keyframes buttonGlare {
+	0% {
+		-webkit-transform: scaleY(0);
+		transform: scaleY(0);
+		opacity: 0;
+	}
+	50% {
+		-webkit-transform: scaleY(1);
+		transform: scaleY(1);
+		opacity: 1;
+		-webkit-transform-origin: top;
+		transform-origin: top;
+	}
+	51% {
+		-webkit-transform: scaleY(1);
+		transform: scaleY(1);
+		-webkit-transform-origin: bottom;
+		transform-origin: bottom;
+	}
+	100% {
+		-webkit-transform: scaleY(0);
+		transform: scaleY(0);
+		opacity: 0;
+		-webkit-transform-origin: bottom;
+		transform-origin: bottom;
+	}
+}
+
+@keyframes buttonGlare {
+	0% {
+		-webkit-transform: scaleY(0);
+		transform: scaleY(0);
+		opacity: 0;
+	}
+	50% {
+		-webkit-transform: scaleY(1);
+		transform: scaleY(1);
+		opacity: 1;
+		-webkit-transform-origin: top;
+		transform-origin: top;
+	}
+	51% {
+		-webkit-transform: scaleY(1);
+		transform: scaleY(1);
+		-webkit-transform-origin: bottom;
+		transform-origin: bottom;
+	}
+	100% {
+		-webkit-transform: scaleY(0);
+		transform: scaleY(0);
+		opacity: 0;
+		-webkit-transform-origin: bottom;
+		transform-origin: bottom;
+	}
+}
+
+
+
+
 
 .work-tiles {
 	width: 100%;
@@ -1286,6 +1408,122 @@ section#credits a {
 	animation: none;
 	opacity: 1;
 }
+
+
+
+
+
+
+/* ----------------------------------------------- about me ----------------------------------------------- */
+
+#about-me {
+	width: 100%;
+	height: 100vh;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-flow: row wrap;
+	flex-flow: row wrap;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: space-evenly;
+	-ms-flex-pack: space-evenly;
+	justify-content: space-evenly;
+}
+
+.about {
+	width: 45%;
+	min-width: 310px;
+	height: auto;
+	visibility: hidden;
+	margin: 0 25px 25px;
+}
+
+.my-portrait {
+	width: 38%;
+	min-width: 310px;
+	max-height: 100vh;
+	height: auto;
+	overflow: visible;
+	position: relative;
+}
+
+.portrait-cover {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 1);
+	position: absolute;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	border: 1px dashed #f907d9;
+	visibility: hidden;
+}
+
+#svg-portrait {
+	visibility: hidden;
+}
+
+.myEyes {
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-flow: row nowrap;
+	flex-flow: row nowrap;
+}
+
+.myEye {
+	position: relative;
+	border-radius: 50%;
+	height: 22px;
+	width: 22px;
+	background-color: rgba(88, 46, 46, 1);
+}
+
+.myEye:after {
+	position: absolute;
+	top: 4px;
+	left: 7px;
+	width: 5px;
+	height: 5px;
+	background-color: rgba(255, 255, 255, .8);
+	border-radius: 50%;
+	content: " ";
+}
+
+.myEye:before {
+	position: absolute;
+	top: 6px;
+	left: 6px;
+	width: 10px;
+	height: 10px;
+	background-color: rgba(0, 0, 0, .9);
+	border-radius: 50%;
+	content: " ";
+}
+
+.eyeLid {
+	fill: #748289;
+}
+
+
+
+
 
 
 /* -------------------------------------------- media query ------------------------------------- */
