--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1451,7 +1451,7 @@ section#credits a {
 	position: relative;
 }
 
-.portrait-cover {
+/* .portrait-cover {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(255, 255, 255, 1);
@@ -1471,12 +1471,11 @@ section#credits a {
 	justify-content: center;
 	border: 1px dashed #f907d9;
 	visibility: hidden;
-}
+} */
 
-#svg-portrait {
-	position: relative;
+/* #svg-portrait {
 	visibility: hidden;
-}
+} */
 
 
 
