--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1418,7 +1418,7 @@ section#credits a {
 
 #about-me {
 	width: 100%;
-	height: 100vh;
+	height: auto;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -1445,9 +1445,7 @@ section#credits a {
 .my-portrait {
 	width: 38%;
 	min-width: 310px;
-	max-height: 100vh;
 	height: auto;
-	overflow: visible;
 	position: relative;
 }
 
@@ -1478,9 +1476,6 @@ section#credits a {
 }
 
 
-foreignObject {
-	overflow: visible;
-}
 
 .myEye {
 	position: relative;
@@ -1586,6 +1581,13 @@ foreignObject {
 	#schecker-draggable-flow {
 		height: 80vh;
 	}
+
+
+
+
+
+
+
 }
 
 
