--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1472,6 +1472,8 @@ section#credits a {
 }
 
 #svg-portrait {
+	width: 100%;
+	height: 100%;
 	visibility: hidden;
 	overflow: visible;
 }
@@ -1485,7 +1487,6 @@ section#credits a {
 	width: 22px;
 	background-color: rgba(71, 45, 46, 1);
 	border: 2px solid rgba(53, 35, 36, .8);
-	z-index: -90000;
 }
 
 .myEye:after {
