--- a/cvStyle.css
+++ b/cvStyle.css
@@ -271,7 +271,7 @@ section {
 /* ----------------------------------------- */
 
 #timeline {
-  background-color: #fcfcfc;
+  background-color: #f5f8fa;
 }
 .timeline {
   margin: 4% auto;
