--- a/cvStyle.css
+++ b/cvStyle.css
@@ -275,7 +275,7 @@ section {
 }
 .timeline {
   margin: 4% auto;
-  width: 50%;
+  width: 80%;
   height: auto;
   position: relative;
   display: flex;
@@ -401,7 +401,7 @@ section {
 
 /* --------------------------------------------------------------------------------           */
 @media screen and (max-width: 700px) {
-  .block, .timeline {
+  .block {
     width: 80%;
   }
 }
