fixed marpit polyfill unable to load from cdn

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -1477,7 +1477,11 @@ section#credits a {
 	overflow: visible;
 }
 
-
+/* svg.data-marpit-svg {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+} */
 
 .myEye {
 	position: fixed;
