minor word changes

--- a/cvStyle.css
+++ b/cvStyle.css
@@ -314,7 +314,7 @@ section {
       .tl-line {
         width: 1px;
         height: 100%;
-        background-color: #0e83ea;
+        background-color: #c0c6cf;
         position: absolute;
         left: 50%;
         top: 5px;
